# emscripten-functions

./: Cargo.toml  LICENSE  README.md
emscripten-functions/: Cargo.toml  README.md  asm_in_main_thread.c  build.rs
emscripten-functions-sys/: Cargo.toml  README.md  build_bindings.rs  build_bindings.sh  update_emscripten.sh
emscripten-functions-sys/emscripten/cache/sysroot/include/emscripten/: version.h
emscripten-functions-sys/src/: console.rs  emscripten.rs  html5.rs  lib.rs  websocket.rs
emscripten-functions/src/: console.rs  emscripten.rs  lib.rs
emscripten-sys/: Cargo.toml  README.md  build.rs  build_bindings.rs
emscripten-sys/emscripten/cache/sysroot/include/emscripten/: version.h
emscripten-sys/src/: emscripten.rs  html5.rs  lib.rs
examples/simple-game/: Cargo.toml  Makefile  README.md  build.rs  shell.html
examples/simple-game/src/: main.rs
