[package]
name = "emscripten-functions"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-friendly bindings to various emscripten system functions"
homepage = "https://github.com/ALEX11BR/emscripten-functions"
repository = "https://github.com/ALEX11BR/emscripten-functions"
keywords = ["emscripten", "bindings"]
categories = ["api-bindings", "wasm"]

[dependencies]
emscripten-functions-sys = { path = "../emscripten-functions-sys", version = "3.1.44" }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-emscripten"
