[package]
name = "emscripten-functions"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Rust-friendly bindings to various emscripten system functions"
homepage = "https://github.com/ALEX11BR/emscripten-functions"
repository = "https://github.com/ALEX11BR/emscripten-functions"
keywords = ["emscripten", "bindings"]
categories = ["api-bindings", "wasm"]

[dependencies]
emscripten-functions-sys = { path = "../emscripten-functions-sys", version = "4.1.401" }

[build-dependencies]
cc = "1.0.83"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-emscripten"
